fix: change CV_site.py for log-in functional

--- a/templates/CV_Nam.html
+++ b/templates/CV_Nam.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="../static/css/style.css">
 <html>
     <head>
-        <title>Nam Dmitrij profile</title>
+        <title>DoncoN profile</title>
         <link rel="shortcut icon" href="../static/DoncoN.png" type="image/png">
         <br>
         <br>
