--- a/templates/log-in.html
+++ b/templates/log-in.html
@@ -9,8 +9,8 @@
 <div class="login">
 	<h1>Login</h1>
     <form method=POST action="{{ url_for('login') }}">
-    	<input type="text" name="u" placeholder="username" required="required" />
-        <input type="password" name="p" placeholder="pass" required="required" />
+    	<input type="text" name="username" placeholder="Username" required="required" />
+        <input type="password" name="pass" placeholder="Password" required="required" />
         <button type="submit" class="btn btn-primary btn-block btn-large">Let me in!!!</button>
     </form>
 </div>
